<resources>
    <string name="app_name">Ma Reunion</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="filter_list">Filtrer par date</string>
    <string name="select_a_room">Choisir le lieu</string>
    <string name="filter_place">Filtrer par lieu</string>
    <string name="no_filter">Toutes les réunions</string>
    <string name="save_btn">Sauvegarder</string>
    <string name="meeting_object">Entrez l\'objet</string>
    <string name="enter_mail_participants">Entrez E-mail</string>
    <string name="time_select">Choisir l\'heure</string>
    <string name="colour_circle">colour_circle</string>
    <string name="delete_button">delete_button</string>
    <string name="add_meeting_fab">add_meeting_fab</string>
    <string name="participant_logo">participant_logo</string>
    <string name="comment_image">Comment_image</string>
    <string name="logo_room">logo_room</string>
    <string name="logo_time">logo_time</string>
    <string name="room_request">Veuillez choisir la salle</string>
    <string name="time_choose">Veuillez choisir l\'heure</string>
    <string name="add_one_participant">Veuillez ajouter au moins un participant</string>
    <string name="object_of_meeting">Veuillez définir l\'objet de la réunion</string>
    <string name="date_choose">Veuillez choisir la date</string>
    <string name="choose_date">Choisir la date</string>


</resources>